--- a/PortfolioBackend/appsettings.json
+++ b/PortfolioBackend/appsettings.json
@@ -9,7 +9,7 @@
   "AllowedHosts": "*",
   "Urls": "https://localhost:7151;http://localhost:7150",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=PortfolioDB;Trusted_Connection=True;MultipleActiveResultSets=true;Encrypt=False"
+    "DefaultConnection": "Data Source=PortfolioDB.sqlite"
   },
   "YouTube": {
     "ApiKey": "YOUR_YOUTUBE_API_KEY",
