made changes to admin.html

--- a/PortfolioBackend/appsettings.Development.json
+++ b/PortfolioBackend/appsettings.Development.json
@@ -4,5 +4,14 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "EmailSettings": {
+    "Host": "smtp.gmail.com",
+    "Port": 465,
+    "FromEmail": "ayyaz081@gmail.com",
+    "FromName": "Portfolio",
+    "Username": "ayyaz081@gmail.com",
+    "Password": "fuompxqaghunclwv",
+    "EnableSsl": true
   }
 }
