--- a/PortfolioBackend/appsettings.json
+++ b/PortfolioBackend/appsettings.json
@@ -14,5 +14,14 @@
   "YouTube": {
     "ApiKey": "YOUR_YOUTUBE_API_KEY",
     "ChannelId": "YOUR_COMPANY_CHANNEL_ID"
+  },
+  "EmailSettings": {
+    "Host": "smtp.gmail.com",
+    "Port": 465,
+    "FromEmail": "ayyaz081@gmail.com",
+    "FromName": "Portfolio",
+    "Username": "ayyaz081@gmail.com",
+    "Password": "fuompxqaghunclwv",
+    "EnableSsl": true
   }
 }
