--- a/PortfolioBackend/PortfolioBackend.csproj
+++ b/PortfolioBackend/PortfolioBackend.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <EnableStaticWebAssetsOptimization>false</EnableStaticWebAssetsOptimization>
+    <DisableStaticWebAssetsOptimization>true</DisableStaticWebAssetsOptimization>
   </PropertyGroup>
 
   <ItemGroup>
@@ -24,5 +26,6 @@
   <ItemGroup>
     <Folder Include="Migrations\" />
   </ItemGroup>
+  
 
 </Project>
