--- a/PortfolioBackend/appsettings.Production.json
+++ b/PortfolioBackend/appsettings.Production.json
@@ -7,18 +7,15 @@
     }
   },
   "AllowedHosts": "*",
-  "AllowedOrigins": [
-    "https://yourdomain.com",
-    "https://www.yourdomain.com"
-  ],
+  "AllowedOrigins": [],
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=PortfolioDB.sqlite"
+    "DefaultConnection": "Data Source=./PortfolioDB.sqlite"
   },
   "Security": {
-    "RequireHttps": false,
+    "RequireHttps": true,
     "UseHSTS": true,
     "HSTSMaxAge": 31536000,
-    "UseHttpsRedirection": false
+    "UseHttpsRedirection": true
   },
   "EmailSettings": {
     "Host": "smtp.gmail.com",
