--- a/publish-fix/appsettings.Production.json
+++ b/publish-fix/appsettings.Production.json
@@ -9,7 +9,7 @@
   "AllowedHosts": "*",
   "AllowedOrigins": [],
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=D:\\home\\site\\wwwroot\\PortfolioDB.sqlite"
+    "DefaultConnection": "Data Source=D:\\home\\site\\wwwroot\\App_Data\\PortfolioDB.sqlite"
   },
   "Security": {
     "RequireHttps": true,
