--- a/publish-fix/appsettings.Development.json
+++ b/publish-fix/appsettings.Development.json
@@ -9,7 +9,7 @@
   "AllowedHosts": "*",
   "Urls": "https://localhost:7151;http://localhost:7150",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=PortfolioDB.sqlite"
+    "DefaultConnection": "Data Source=.\\wwwroot\\App_Data\\PortfolioDB.sqlite"
   },
   "CertificateSettings": {
     "UseLetEncrypt": false,
