--- a/publish-fix/appsettings.json
+++ b/publish-fix/appsettings.json
@@ -9,7 +9,7 @@
   "AllowedHosts": "*",
   "AllowedOrigins": [],
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=PortfolioDB.sqlite"
+    "DefaultConnection": "Data Source=.\\wwwroot\\App_Data\\PortfolioDB.sqlite"
   },
   "YouTube": {
     "ApiKey": "YOUR_YOUTUBE_API_KEY",
