--- a/PortfolioBackend/appsettings.Production.json
+++ b/PortfolioBackend/appsettings.Production.json
@@ -8,6 +8,10 @@
   },
   "AllowedHosts": "*",
   "AllowedOrigins": [],
+  "CORS": {
+    "AllowedOrigins": [],
+    "AllowCredentials": true
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=D:\\home\\site\\wwwroot\\App_Data\\PortfolioDB.sqlite"
   },
