--- a/.github/workflows/master_codenex.yml
+++ b/.github/workflows/master_codenex.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     permissions:
       contents: read #This is required for actions/checkout
 
@@ -27,7 +27,7 @@ jobs:
         run: dotnet build --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o "${{env.DOTNET_ROOT}}/myapp"
+        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -36,7 +36,7 @@ jobs:
           path: ${{env.DOTNET_ROOT}}/myapp
 
   deploy:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     needs: build
     permissions:
       id-token: write #This is required for requesting the JWT
@@ -51,9 +51,9 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_C81E4A7120AD4241A3AE4D884547BF61 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_6B7680ECD5584713A0A283AFCE98C756 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_223496F887C04DB7A3DD46196CFECC18 }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_6A7DBC1018834D7291B1467C53F69AA1 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_33FDD8C6B2F044C9AEED564667DC5D42 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_C246156ED38541B2A77FE6F8FC265822 }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
