--- a/PortfolioBackend/appsettings.Production.json
+++ b/PortfolioBackend/appsettings.Production.json
@@ -7,10 +7,11 @@
     }
   },
   "AllowedHosts": "*",
-  "AllowedOrigins": [],
+  "AllowedOrigins": ["*"],
   "CORS": {
-    "AllowedOrigins": [],
-    "AllowCredentials": true
+    "AllowedOrigins": ["*"],
+    "AllowCredentials": false,
+    "AllowAnyOrigin": true
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=D:\\home\\site\\wwwroot\\App_Data\\PortfolioDB.sqlite"
