--- a/.env.example
+++ b/.env.example
@@ -47,6 +47,12 @@ USE_HTTPS_REDIRECTION=true
 # API Configuration
 API_BASE_URL=https://your-api-domain.com
 
+# Frontend Configuration (for email links)
+# IMPORTANT: Set these to your actual frontend URLs in production
+FRONTEND_BASE_URL=https://your-frontend-domain.com
+EMAIL_VERIFICATION_PATH=/auth/verify
+PASSWORD_RESET_PATH=/auth/reset
+
 # Admin User Configuration (for automatic creation on startup)
 # IMPORTANT: Set these for production to automatically create an admin user
 ADMIN_EMAIL=admin@yourportfolio.com
