--- a/PortfolioBackend/appsettings.Development.json
+++ b/PortfolioBackend/appsettings.Development.json
@@ -30,11 +30,11 @@
   },
   "EmailSettings": {
     "Host": "smtp.gmail.com",
-    "Port": 465,
-    "FromEmail": "ayyaz081@gmail.com",
+    "Port": 587,
+    "FromEmail": "",
     "FromName": "Portfolio Dev",
-    "Username": "ayyaz081@gmail.com",
-    "Password": "fuompxqaghunclwv",
+    "Username": "",
+    "Password": "",
     "EnableSsl": true
   }
 }
