--- a/PortfolioBackend/appsettings.Production.json
+++ b/PortfolioBackend/appsettings.Production.json
@@ -24,6 +24,11 @@
     "AllowCredentials": true,
     "AllowAnyOrigin": false
   },
+  "Frontend": {
+    "BaseUrl": "",
+    "EmailVerificationPath": "/auth/verify",
+    "PasswordResetPath": "/auth/reset"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=/app/data/PortfolioDB.sqlite"
   },
