--- a/PortfolioBackend/Properties/launchSettings.json
+++ b/PortfolioBackend/Properties/launchSettings.json
@@ -16,7 +16,8 @@
       "launchUrl": "",
       "applicationUrl": "http://localhost:7150",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "FRONTEND_BASE_URL": "http://localhost:3000"
       }
     },
     "https": {
@@ -26,7 +27,8 @@
       "launchUrl": "",
       "applicationUrl": "https://localhost:7151;http://localhost:7150",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "FRONTEND_BASE_URL": "http://localhost:3000"
       }
     },
     "IIS Express": {
