--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,8 @@ services:
       - JWT_KEY=${JWT_KEY:-your-ultra-secure-jwt-secret-key-with-at-least-256-bits-length}
       - JWT_ISSUER=${JWT_ISSUER:-https://localhost:8080}
       - JWT_AUDIENCE=${JWT_AUDIENCE:-https://localhost:8080}
-      - CORS_ALLOWED_ORIGINS=${CORS_ALLOWED_ORIGINS:-http://localhost:3000,https://localhost:3000}
+      - CORS_ALLOWED_ORIGINS=${CORS_ALLOWED_ORIGINS:-https://localhost:8080}
+      - API_BASE_URL=${API_BASE_URL:-https://localhost:8080/api}
       - EMAIL_HOST=${EMAIL_HOST:-smtp.gmail.com}
       - EMAIL_PORT=${EMAIL_PORT:-587}
       - EMAIL_FROM=${EMAIL_FROM}
@@ -28,7 +29,7 @@ services:
       - ADMIN_PASSWORD=${ADMIN_PASSWORD}
       - ADMIN_FIRST_NAME=${ADMIN_FIRST_NAME:-Admin}
       - ADMIN_LAST_NAME=${ADMIN_LAST_NAME:-User}
-      - FRONTEND_BASE_URL=${FRONTEND_BASE_URL:-http://localhost:3000}
+      - FRONTEND_BASE_URL=${FRONTEND_BASE_URL:-https://localhost:8080}
       - EMAIL_VERIFICATION_PATH=${EMAIL_VERIFICATION_PATH:-/auth/verify}
       - PASSWORD_RESET_PATH=${PASSWORD_RESET_PATH:-/auth/reset}
     volumes:
