--- a/PortfolioBackend/appsettings.Development.json
+++ b/PortfolioBackend/appsettings.Development.json
@@ -7,7 +7,7 @@
     }
   },
   "AllowedHosts": "*",
-  "Urls": "https://localhost:7151;http://localhost:7150",
+  "Urls": "http://localhost:7150",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=.\\wwwroot\\App_Data\\PortfolioDB.sqlite"
   },
@@ -20,7 +20,7 @@
     "Domains": ["localhost"]
   },
   "CORS": {
-    "AllowedOrigins": ["https://localhost:7151", "http://localhost:7150", "file://"],
+    "AllowedOrigins": ["http://localhost:7150", "file://"],
     "AllowCredentials": true
   },
   "Security": {
