--- a/PortfolioBackend/appsettings.Production.json
+++ b/PortfolioBackend/appsettings.Production.json
@@ -33,29 +33,25 @@
     "DefaultConnection": "Data Source=/app/data/PortfolioDB.sqlite"
   },
   "Jwt": {
-    "Key": "",
+    "Key": "production-jwt-secret-key-256-bits-long-replace-this-with-your-own-secure-key",
     "Issuer": "PortfolioAPI",
     "Audience": "PortfolioAPI",
     "ExpiryHours": "24"
   },
   "Security": {
-    "RequireHttps": true,
-    "UseHSTS": true,
-    "HSTSMaxAge": 31536000,
-    "UseHttpsRedirection": true
+    "RequireHttps": false,
+    "UseHSTS": false,
+    "HSTSMaxAge": 0,
+    "UseHttpsRedirection": false
   },
   "EmailSettings": {
     "Host": "smtp.gmail.com",
     "Port": 587,
-    "FromEmail": "",
-    "FromName": "Portfolio",
-    "Username": "",
-    "Password": "",
+    "FromEmail": "ayyaz081@gmail.com",
+    "FromName": "Portfolio - Ayyaz Ahmad",
+    "Username": "ayyaz081@gmail.com",
+    "Password": "your-gmail-app-password-here",
     "EnableSsl": true
-  },
-  "YouTube": {
-    "ApiKey": "",
-    "ChannelId": ""
   },
   "RateLimiting": {
     "RequestsPerMinute": 60,
