--- a/PortfolioBackend/appsettings.json
+++ b/PortfolioBackend/appsettings.json
@@ -17,17 +17,13 @@
     "Audience": "PortfolioAPI",
     "ExpiryHours": "24"
   },
-  "YouTube": {
-    "ApiKey": "YOUR_YOUTUBE_API_KEY",
-    "ChannelId": "YOUR_COMPANY_CHANNEL_ID"
-  },
   "EmailSettings": {
     "Host": "smtp.gmail.com",
-    "Port": 465,
+    "Port": 587,
     "FromEmail": "ayyaz081@gmail.com",
-    "FromName": "Portfolio",
+    "FromName": "Portfolio - Ayyaz Ahmad",
     "Username": "ayyaz081@gmail.com",
-    "Password": "",
+    "Password": "your-gmail-app-password-here",
     "EnableSsl": true
   }
 }
