--- a/PortfolioBackend/Properties/launchSettings.json
+++ b/PortfolioBackend/Properties/launchSettings.json
@@ -25,7 +25,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "",
-      "applicationUrl": "https://localhost:7151;http://localhost:7150",
+      "applicationUrl": "http://localhost:7150",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "FRONTEND_BASE_URL": "http://localhost:3000"
