--- a/PortfolioBackend/appsettings.Production.json
+++ b/PortfolioBackend/appsettings.Production.json
@@ -18,6 +18,7 @@
     }
   },
   "AllowedHosts": "*",
+  "Urls": "http://localhost:7150",
   "AllowedOrigins": [],
   "CORS": {
     "AllowedOrigins": [],
