--- a/PortfolioBackend/appsettings.json
+++ b/PortfolioBackend/appsettings.json
@@ -7,6 +7,7 @@
     }
   },
   "AllowedHosts": "*",
+  "Urls": "http://localhost:7150",
   "AllowedOrigins": [],
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=.\\wwwroot\\App_Data\\PortfolioDB.sqlite"
