migrated to sql

--- a/PortfolioBackend/appsettings.Production.json
+++ b/PortfolioBackend/appsettings.Production.json
@@ -31,7 +31,7 @@
     "PasswordResetPath": "/auth/reset"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=/app/data/PortfolioDB.sqlite"
+    "DefaultConnection": "Server=tcp:codenex.database.windows.net,1433;Initial Catalog=codenex;Persist Security Info=False;User ID=codenex;Password=Az_55270;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Jwt": {
     "Key": "production-jwt-secret-key-256-bits-long-replace-this-with-your-own-secure-key",
