--- a/PortfolioBackend/appsettings.json
+++ b/PortfolioBackend/appsettings.json
@@ -10,7 +10,7 @@
   "Urls": "http://localhost:7150",
   "AllowedOrigins": [],
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=.\\wwwroot\\App_Data\\PortfolioDB.sqlite"
+    "DefaultConnection": "Server=tcp:codenex.database.windows.net,1433;Initial Catalog=codenex;Persist Security Info=False;User ID=codenex;Password=Az_55270;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Jwt": {
     "Key": "development-jwt-secret-key-that-is-at-least-256-bits-long-for-local-development-only-do-not-use-in-production",
