--- a/PortfolioBackend/Properties/launchSettings.json
+++ b/PortfolioBackend/Properties/launchSettings.json
@@ -17,6 +17,7 @@
       "applicationUrl": "http://localhost:7150",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
+        "DATABASE_PROVIDER": "sqlserver",
         "FRONTEND_BASE_URL": "http://localhost:3000"
       }
     },
@@ -28,6 +29,7 @@
       "applicationUrl": "http://localhost:7150",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
+        "DATABASE_PROVIDER": "sqlserver",
         "FRONTEND_BASE_URL": "http://localhost:3000"
       }
     },
@@ -36,7 +38,8 @@
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "DATABASE_PROVIDER": "sqlserver"
       }
     }
   }
