--- a/PortfolioBackend/appsettings.Development.json
+++ b/PortfolioBackend/appsettings.Development.json
@@ -31,10 +31,10 @@
   "EmailSettings": {
     "Host": "smtp.gmail.com",
     "Port": 587,
-    "FromEmail": "",
-    "FromName": "Portfolio Dev",
-    "Username": "",
-    "Password": "",
+    "FromEmail": "ayyaz081@gmail.com",
+    "FromName": "Portfolio - Ayyaz Ahmad",
+    "Username": "ayyaz081@gmail.com",
+    "Password": "your-gmail-app-password-here",
     "EnableSsl": true
   }
 }
