--- a/PortfolioBackend/appsettings.Production.json
+++ b/PortfolioBackend/appsettings.Production.json
@@ -3,7 +3,7 @@
     "LogLevel": {
       "Default": "Warning",
       "Microsoft.AspNetCore": "Warning",
-      "Microsoft.EntityFrameworkCore.Database.Command": "Error",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Warning",
       "Microsoft.AspNetCore.Authentication": "Warning",
       "Microsoft.AspNetCore.Authorization": "Warning",
       "System.Net.Http.HttpClient": "Warning"
@@ -18,12 +18,12 @@
     }
   },
   "AllowedHosts": "*",
-  "Urls": "http://localhost:7150",
+  "Urls": "http://0.0.0.0:7150",
   "AllowedOrigins": [],
   "CORS": {
-    "AllowedOrigins": [],
-    "AllowCredentials": true,
-    "AllowAnyOrigin": false
+    "AllowedOrigins": ["*"],
+    "AllowCredentials": false,
+    "AllowAnyOrigin": true
   },
   "Frontend": {
     "BaseUrl": "",
