--- a/PortfolioBackend/appsettings.Development.json
+++ b/PortfolioBackend/appsettings.Development.json
@@ -9,7 +9,7 @@
   "AllowedHosts": "*",
   "Urls": "http://localhost:7150",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:codenex.database.windows.net,1433;Initial Catalog=codenex;Persist Security Info=False;User ID=codenex;Password=Az_55270;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": ""
   },
   "CertificateSettings": {
     "UseLetEncrypt": false,
