--- a/PortfolioBackend/appsettings.Production.json
+++ b/PortfolioBackend/appsettings.Production.json
@@ -31,13 +31,13 @@
     "PasswordResetPath": "/auth/reset"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:codenex.database.windows.net,1433;Initial Catalog=codenex;Persist Security Info=False;User ID=codenex;Password=Az_55270;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": ""
   },
   "Jwt": {
-    "Key": "production-jwt-secret-key-256-bits-long-replace-this-with-your-own-secure-key",
-    "Issuer": "PortfolioAPI",
-    "Audience": "PortfolioAPI",
-    "ExpiryHours": "24"
+    "Key": "",
+    "Issuer": "",
+    "Audience": "",
+    "ExpiryHours": ""
   },
   "Security": {
     "RequireHttps": false,
@@ -46,12 +46,12 @@
     "UseHttpsRedirection": false
   },
   "EmailSettings": {
-    "Host": "smtp.gmail.com",
+    "Host": "",
     "Port": 587,
-    "FromEmail": "ayyaz081@gmail.com",
-    "FromName": "Portfolio - Ayyaz Ahmad",
-    "Username": "ayyaz081@gmail.com",
-    "Password": "your-gmail-app-password-here",
+    "FromEmail": "",
+    "FromName": "",
+    "Username": "",
+    "Password": "",
     "EnableSsl": true
   },
   "RateLimiting": {
