--- a/PortfolioBackend/appsettings.json
+++ b/PortfolioBackend/appsettings.json
@@ -10,21 +10,21 @@
   "Urls": "http://localhost:7150",
   "AllowedOrigins": [],
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:codenex.database.windows.net,1433;Initial Catalog=codenex;Persist Security Info=False;User ID=codenex;Password=Az_55270;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": ""
   },
   "Jwt": {
-    "Key": "development-jwt-secret-key-that-is-at-least-256-bits-long-for-local-development-only-do-not-use-in-production",
-    "Issuer": "PortfolioAPI",
-    "Audience": "PortfolioAPI",
-    "ExpiryHours": "24"
+    "Key": "",
+    "Issuer": "",
+    "Audience": "",
+    "ExpiryHours": ""
   },
   "EmailSettings": {
-    "Host": "smtp.gmail.com",
+    "Host": "",
     "Port": 587,
-    "FromEmail": "ayyaz081@gmail.com",
-    "FromName": "Portfolio - Ayyaz Ahmad",
-    "Username": "ayyaz081@gmail.com",
-    "Password": "your-gmail-app-password-here",
+    "FromEmail": "",
+    "FromName": "",
+    "Username": "",
+    "Password": "",
     "EnableSsl": true
   }
 }
