--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -32,7 +32,7 @@
     "Host": "smtp.gmail.com",
     "Port": 587,
     "FromEmail": "ayyaz081@gmail.com",
-    "FromName": "Portfolio - Ayyaz Ahmad",
+    "FromName": "CodeNex Solutions - Ayyaz Ahmad",
     "Username": "ayyaz081@gmail.com",
     "Password": "your-gmail-app-password-here",
     "EnableSsl": true
