--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# Example environment file for Portfolio Backend
+# Example environment file for CodeNex Solutions
 # Copy this to .env and fill in your actual values
 
 # Database Configuration (required)
@@ -16,7 +16,7 @@ ADMIN_PASSWORD=YourSecureAdminPassword123!
 EmailSettings__Host=smtp.gmail.com
 EmailSettings__Port=587
 EmailSettings__FromEmail=your_email@gmail.com
-EmailSettings__FromName=Portfolio - Your Name
+EmailSettings__FromName=CodeNex Solutions - Your Name
 EmailSettings__Username=your_email@gmail.com
 EmailSettings__Password=your_gmail_app_password
 EmailSettings__EnableSsl=true
@@ -29,8 +29,8 @@ REQUIRE_EMAIL_CONFIRMATION=true
 
 # JWT Configuration (recommended to set via environment)
 JWT_KEY=your-256-bit-secret-jwt-key-replace-this-in-production
-JWT_ISSUER=PortfolioAPI
-JWT_AUDIENCE=PortfolioAPI
+JWT_ISSUER=CodeNexAPI
+JWT_AUDIENCE=CodeNexAPI
 JWT_EXPIRY_HOURS=24
 
 # API Base URL (optional - for frontend integration)
