--- a/appsettings.Logging.json
+++ b/appsettings.Logging.json
@@ -23,7 +23,7 @@
       {
         "Name": "File",
         "Args": {
-          "path": "logs/portfolio-.log",
+          "path": "logs/codenex-.log",
           "rollingInterval": "Day",
           "retainedFileCountLimit": 7,
           "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff} [{Level:u3}] {SourceContext}: {Message:lj}{NewLine}{Exception}",
@@ -33,7 +33,7 @@
       {
         "Name": "File",
         "Args": {
-          "path": "logs/errors/portfolio-errors-.log",
+          "path": "logs/errors/codenex-errors-.log",
           "rollingInterval": "Day",
           "retainedFileCountLimit": 30,
           "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff} [{Level:u3}] {SourceContext}: {Message:lj}{NewLine}{Exception}",
@@ -49,7 +49,7 @@
       "WithThreadId"
     ],
     "Properties": {
-      "Application": "Portfolio Backend",
+      "Application": "CodeNex Solutions",
       "Environment": "Production"
     }
   },
@@ -65,6 +65,6 @@
       "Microsoft": "Error"
     },
     "LogName": "Application",
-    "SourceName": "Portfolio Backend"
+    "SourceName": "CodeNex Solutions"
   }
 }
