--- a/web.config
+++ b/web.config
@@ -7,8 +7,8 @@
         <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
       </handlers>
       <aspNetCore processPath="dotnet" 
-                  arguments=".\PortfolioBackend.dll" 
-                  stdoutLogEnabled="false" 
+                  arguments=".\CodeNex.dll" 
+                  stdoutLogEnabled="true" 
                   stdoutLogFile=".\logs\stdout" 
                   hostingModel="inprocess">
         <environmentVariables>
