Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/master_codenex.yml
+++ b/.github/workflows/master_codenex.yml
@@ -1,3 +1,6 @@
+# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
+# More GitHub Actions for Azure: https://github.com/Azure/actions
+
 name: Build and deploy ASP.Net Core app to Azure Web App - codenex
 
 on:
@@ -20,21 +23,11 @@ jobs:
         with:
           dotnet-version: '8.x'
 
-      - name: Restore dependencies
-        run: dotnet restore
-
       - name: Build with dotnet
-        run: dotnet build --configuration Release --no-restore
+        run: dotnet build --configuration Release
 
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
-
-      - name: Verify web.config DLL reference
-        run: |
-          if grep -q "PortfolioBackend.dll" "${{env.DOTNET_ROOT}}/myapp/web.config"; then
-            echo "Error: web.config still references PortfolioBackend.dll"
-            sed -i 's/PortfolioBackend.dll/CodeNex.dll/g' "${{env.DOTNET_ROOT}}/myapp/web.config"
-          fi
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -45,9 +38,6 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
       id-token: write #This is required for requesting the JWT
       contents: read #This is required for actions/checkout
@@ -61,9 +51,9 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_4753BE0CB5A1400D8B4FE132A5D370C1 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_C534A2546E3E42D7B527C23FF4474E81 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_BABF6053619446F5934F6AF17C44940F }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_1E113E77280D436C98AF646F74B9D0B3 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_3E8DB04068B741C18EFC43DF3F5BE94D }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_E3489EE285964177AAF1A0D2A3EE6F84 }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
@@ -73,14 +63,3 @@ jobs:
           slot-name: 'Production'
           package: .
           
-      - name: Verify deployment health
-        run: |
-          echo "Waiting for deployment to stabilize..."
-          sleep 30
-          HTTP_STATUS=$(curl -s -o /dev/null -w "%{http_code}" https://codenex.azurewebsites.net/health)
-          if [ $HTTP_STATUS -eq 200 ]; then
-            echo "✅ Application health check passed!"
-          else
-            echo "⚠️ Application health check returned status $HTTP_STATUS"
-            echo "Check Azure logs for more details"
-          fi
