--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -9,14 +9,14 @@
   "AllowedHosts": "*",
   "Urls": "http://localhost:7150",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=CodeNexDb;Trusted_Connection=true;MultipleActiveResultSets=true;TrustServerCertificate=true"
+    "DefaultConnection": ""
   },
   "CertificateSettings": {
     "UseLetEncrypt": false,
     "UseSelfSigned": false,
     "UseDevelopmentCertificate": true,
     "CertPath": "./ssl",
-    "Email": "ayyaz081@gmail.com",
+    "Email": "",
     "Domains": ["localhost"]
   },
   "CORS": {
@@ -29,12 +29,12 @@
     "UseHttpsRedirection": false
   },
   "EmailSettings": {
-    "Host": "smtp.gmail.com",
-    "Port": 587,
-    "FromEmail": "ayyaz081@gmail.com",
-    "FromName": "CodeNex Solutions - Ayyaz Ahmad",
-    "Username": "ayyaz081@gmail.com",
-    "Password": "your-gmail-app-password-here",
+    "Host": "",
+    "Port": 0,
+    "FromEmail": "",
+    "FromName": "",
+    "Username": "",
+    "Password": "",
     "EnableSsl": true
   }
 }
