--- a/appsettings.json
+++ b/appsettings.json
@@ -10,7 +10,7 @@
   "Urls": "http://localhost:7150",
   "AllowedOrigins": [],
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=CodeNexDb;Trusted_Connection=true;MultipleActiveResultSets=true;TrustServerCertificate=true"
+    "DefaultConnection": ""
   },
   "Jwt": {
     "Key": "",
@@ -20,7 +20,7 @@
   },
   "EmailSettings": {
     "Host": "",
-    "Port": 587,
+    "Port": 0,
     "FromEmail": "",
     "FromName": "",
     "Username": "",
